--- a/index.html
+++ b/index.html
@@ -1,19 +1,3 @@
-<!DOCTYPE html>
- <html>
- <head>
- <meta charset="utf-8">
- <title>Lew's Blog</title>
-     <style media="screen">
-         * {
-                 margin: 0;
-                 padding: 0;
-         }
-     </style>
- </head>
- <body>
- </body>
-     <script type="text/javascript">
- 				//将这个地址修改成需要的博客地址
-         window.location.href = "http://101.35.246.56/"; 
-     </script>
- </html>
+    <script>
+      window.location.href="http://101.35.246.56/"
+    </script>
