--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
-    <script>
-      window.location.href="http://101.35.246.56/"
-    </script>
+<!DOCTYPE html>
+<html>
+<script>
+    window.location.href="http://101.35.246.56/";
+</script>
+ 
+<body>
+</body>
+</html>
